fixed font size scaling too large

--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@
 {
     color: rgba(66, 119, 173, 1);
     font-family: 'Kurale';
-    font-size: 10vw;
+    font-size: 55px;
     
     cursor: pointer;
     text-decoration: none;
